--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An awesome Kibana plugin",
   "main": "index.js",
   "kibana": {
-    "version": "kibana",
+    "version": "6.4.2",
     "templateVersion": "1.0.0"
   },
   "scripts": {
